add: download settings icon & styles optimization

--- a/src/styles/pic/download.less
+++ b/src/styles/pic/download.less
@@ -1,57 +1,77 @@
 .pic-download {
-    margin-top: 28px;
-    &-title {
-        font-size: 26px;
-        color: @color-text-primary;
-        font-weight: 600;
-        letter-spacing: 0.05em;
-        .no-select();
+  margin-top: 28px;
+  &-title {
+		display: flex;
+		font-size: 26px;
+		height: 34px;
+    color: @color-text-primary;
+    font-weight: 600;
+		letter-spacing: 0.05em;
+		align-items: center;
+		.no-select();
+		span {
+			flex: 1;
+			display: block;
+			height: 32px;
+		}
+		&-icon {
+			justify-self: flex-end;
+			display: block;
+			height: 34px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			svg {
+				width: 32px;
+				height: 32px;
+			}
+		}
+  }
+  &-items {
+    display: flex;
+    margin-top: 18px;
+    .el-button {
+      flex: 1;
+      flex-grow: 1;
     }
-    &-items {
-        display: flex;
-        margin-top: 18px;
-        .el-button {
-            flex: 1;
-            flex-grow: 1;
-        }
-    }
+  }
 }
 
 .dark {
-    .pic-download {
-        &-title {
-            color: darken(@color-text-primary, 2.5%);
-        }
-        .el-button {
-            filter: brightness(0.875);
-        }
+  .pic-download {
+    &-title {
+      color: darken(@color-text-primary, 2.5%);
     }
+    .el-button {
+      filter: brightness(0.875);
+    }
+  }
 }
 
 /* Responsive */
 @media(max-width: 1024px) {
-    .pic-download {
-        &-title {
-            font-size: 24px;
-        }
+  .pic-download {
+    &-title {
+      font-size: 24px;
     }
+  }
 }
 
 /* iPad / iPad Pro protrait */
 @media screen and (orientation: portrait) and (max-width: 1024px) {
-    .pic-download {
-        &-title {
-            font-size: 22px;
-        }
+  .pic-download {
+    &-title {
+      font-size: 22px;
     }
+  }
 }
 
 /* Mobile */
 @media(max-width: 767px) {
-    .pic-download {
-        margin-top: 28px;
-        &-title {
-            font-size: 22px;
-        }
+  .pic-download {
+    margin-top: 28px;
+    &-title {
+      font-size: 22px;
     }
+  }
 }
