add: optimization & download list

--- a/src/styles/basic/anim.less
+++ b/src/styles/basic/anim.less
@@ -1,10 +1,28 @@
 @keyframes cardFadeIn {
-    0% {
-        opacity: 0;
-        transform: translateY(12px);
-    }
-    100% {
-        opacity: 1;
-        transform: none;
-    }
+  0% {
+		opacity: 0;
+		transform: translateY(12px);
+  }
+  100% {
+		opacity: 1;
+		transform: none;
+  }
+}
+
+@keyframes tagIn {
+	0% {
+		transform: translateX(100%);
+	}
+	100% {
+		transform: translateX(0);
+	}
+}
+
+@keyframes tagOut {
+	0% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(100%);
+	}
 }
