--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -51,6 +51,9 @@
       color: darken(@color-primary, 2.5%);
     }
     .pic-related-paginator {
+			&-item {
+        color: darken(@color-text-primary, 2.5%);
+      }
       &-item:hover {
         color: lighten(@color-text-primary, 2.5%);
       }
