fix: background styles of el-loading-mask

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -2,8 +2,8 @@
 
 .artist-container {
   min-height: 100vh;
-  .el-loading-mask {
-    background-color: #fff;
+  & > .el-loading-mask {
+    background-color: #fff !important;
   }
   .infinite-loading-container {
     .infinite-status-prompt {
