--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -4,8 +4,8 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  .el-loading-mask {
-    background-color: #fff;
+  & > .el-loading-mask {
+    background-color: #fff !important;
   }
   .pic-close {
     position: absolute;
