fix: announce footer

--- a/src/styles/basic/dialog.less
+++ b/src/styles/basic/dialog.less
@@ -41,10 +41,10 @@
       word-break: break-all;
       white-space: pre-wrap;
     }
-    .annouce-footer {
+    .announce-footer {
       text-align: right;
       line-height: 24px;
-      margin-top: 12px;
+      margin-top: 18px;
     }
   }
 }
