feat: add translate3d to enable hd acc

--- a/src/styles/landing/landing.less
+++ b/src/styles/landing/landing.less
@@ -13,6 +13,7 @@
 		background-repeat: no-repeat;
 		background-size: 1680px auto;
     transition: background-color 0.5s ease-in-out, background-size 0.5s ease-in-out;
+    transform: translate3d(0, 0, 0);
     filter: brightness(0.98);
     .landing-card {
       margin-bottom: 1.5rem;
