--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -4,6 +4,7 @@
   max-height: 21.25rem;
   position: relative;
   transition: max-height 0.5s ease-in-out;
+  transform: translate3d(0, 0, 0);
 }
 
 .banner-expanded {
