--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -72,6 +72,7 @@
         width: 100%;
         .waterfall-container {
           margin: 0 auto;
+          transform: translate3d(0, 0, 0);
         }
       }
     }
