fix: rank close button position

--- a/src/styles/rank/rank.less
+++ b/src/styles/rank/rank.less
@@ -43,6 +43,7 @@
   &-close {
     float: right;
     transition: 200ms ease-in-out;
+    transform: translateX(8px);
   }
   &-close:hover {
     color: lighten(@color-text-primary, 10%);
