--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -34,6 +34,11 @@
   &-content {
     margin-top: 16px;
     margin-left: -8px;
+    .waterfall-wrapper {
+      .waterfall-container {
+        position: relative;
+      }
+    }
   }
   &-content-completed {
     font-weight: 600;
