fix: related waterfall no more tips style

--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -46,6 +46,15 @@
     color: @color-text-primary;
     user-select: none;
   }
+  .infinite-loading-container {
+    .infinite-status-prompt {
+      padding: 32px 0 16px 0 !important;
+      color: @color-text-primary !important;
+      font-weight: 600;
+      letter-spacing: 0.05em;
+      .no-select();
+    }
+  }
 }
 
 // dark mode
