fix: reset masonry and tweak related card width

--- a/src/styles/pic/pic.less
+++ b/src/styles/pic/pic.less
@@ -125,7 +125,7 @@
   .pic-action {
     bottom: 26px !important;
   }
-  }
+}
 
 /* Responsive */
 @media(max-width: 1680px) {
@@ -160,7 +160,7 @@
 }
 
 /* iPad / iPad Pro protrait */
-@media screen and (orientation: portrait) and (max-width: 1024px) {
+@media (orientation: portrait) and (max-width: 1024px) {
   .pic-container {
     width: auto;
     padding: 0 24px;
