--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -281,7 +281,7 @@
 }
 
 /* iPad / iPad Pro protrait */
-@media screen and (orientation: portrait) and (max-width: 1024px) {
+@media (orientation: portrait) and (max-width: 1024px) {
     .pic-presentation-image-wrapper {
         width: calc(100vw - 48px) !important;
         .pic-presentation-image {
