--- a/src/styles/pic/related.less
+++ b/src/styles/pic/related.less
@@ -16,7 +16,8 @@
 			height: 34px;
 		}
     .pic-related-paginator {
-			height: 32px;
+      height: 32px;
+      transform: translateX(4px);
       &-item {
 				height: 32px;
         display: inline-block;
